--- a/systemd/nostream-pod.yaml
+++ b/systemd/nostream-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: kompose convert -f docker-compose.yml --out kubernetes
     kompose.version: 1.28.0 (HEAD)
   creationTimestamp: null
   labels:
@@ -11,7 +11,9 @@ metadata:
   name: nostream
 spec:
   containers:
-    - env:
+    - image: ghcr.io/cameri/nostream:main
+      name: nostream
+      env:
         - name: DB_ACQUIRE_CONNECTION_TIMEOUT
           value: "60000"
         - name: DB_HOST
@@ -24,6 +26,11 @@ spec:
           value: nostr_ts_relay
         - name: DB_PASSWORD
           value: nostr_ts_relay
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-nostream-password-kube
+              key: password
         - name: DB_PORT
           value: "5432"
         - name: DB_USER
@@ -84,11 +91,12 @@ spec:
           value: tor_proxy
         - name: TOR_PASSWORD
           value: nostr_ts_relay
-      image: ghcr.io/cameri/nostream:main
-      name: nostream
-      ports:
-        - containerPort: 8008
-          hostIP: 127.0.0.1
-      resources: {}
-  restartPolicy: OnFailure
-status: {}
+        - name: ZEBEDEE_API_KEY
+          value: foo
+      volumeMounts:
+        - name: nostream-settings-volume
+        mountPath: /home/node/.nostr
+  volumes:
+    - name: nostream-settings-volume
+      configMap:
+        name: nostream-settings
